# loan-risk-analyser

./: .gitignore  README.md
backend/: Dockerfile  (+4 more)
model_training/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
model_training/config/: feature_names.py  logging_config.py  paths.py
model_training/data/dictionary/: lending_club_dictionary.csv
model_training/data/final/: norway_ppp.csv  oecd_unemployment_nor_usa.csv  total_inflation_factors.csv  us_state_unemployment_rate.csv
model_training/data/raw/: ssb_inflation_data.csv
model_training/models/: __init__.py  xgboost_aft.py  xgboost_dml.py
model_training/pipelines/: __init__.py  aft_pipeline.py  dml_pipeline.py
model_training/settings/: gcloud_paths.yaml  training.yaml  vertex.yaml
model_training/training/: __init__.py  train_models.py
model_training/transformers/cleaning/: __init__.py  drop_columns_transformer.py  drop_na_transformer.py  zero_imputer.py
model_training/transformers/feature_creation/: __init__.py  bounds_transformer.py  credit_history_transformer.py  default_transformer.py  interaction_transformer.py  unemployment_transformer.py  year_month_transformer.py
model_training/transformers/feature_engineering/: __init__.py  datetime_transformer.py  emp_length_transformer.py  fico_transformer.py  grade_transformer.py  monetary_transformer.py  one_hot_encoder.py  percentage_transformer.py  term_transformer.py
model_training/utils/: API_utils.py  custom_typing.py  google_secrets.py  google_storage.py  interaction_operations.py  metrics.py  settings_loader.py
(+55 files in other folders)
