[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config",
    "models",
    "pipelines",
    "transformers",
    "training",
    "utils",
    "data",
]